remove IE hack that breaks in IE7; GRAMPS bug report #1266
svn: r9046

--- a/src/data/main2.css
+++ b/src/data/main2.css
@@ -214,8 +214,6 @@ TD.field {
 #content { }
 #summaryarea {
     min-height: 100px;
-    /* Hack: IE Dynamic Expression to set the width */
-    height: expression(document.body.clientHeight < 1 ? "100px" : "100px" );
 }
 #footer {
 	background-color: #e0e0e9;
